[package]
name = "promptpass"
version = "0.1.0"
authors = ["Graham Christensen <graham@grahamc.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.16.3"

[patch.crates-io]
cursive_core = { git = "https://github.com/grahamc/cursive", branch = "basic" }
