[package]
name = "promptpass"
version = "0.1.0"
authors = ["Graham Christensen <graham@grahamc.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { git = "https://github.com/grahamc/cursive", rev = "7c3f31103201cd1e7a4c77ba323758800abf7882" }
cursive_core = { git = "https://github.com/grahamc/cursive", rev = "7c3f31103201cd1e7a4c77ba323758800abf7882" }


